# Ardupilot_Multiagent_Simulation

./: .gitignore  Copy_of_Untitled2.ipynb  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
src/multiagent_simulation/: package.xml  setup.cfg  setup.py
src/multiagent_simulation/config/: gazebo-iris.parm  multiagent_lidar_camera_bridge.yaml  robots.yaml
src/multiagent_simulation/launch/: multiagent_simulation.launch.py
src/multiagent_simulation/models/camera/: model.config  model.sdf  model.xacro
src/multiagent_simulation/models/depth_camera/: model.config  model.sdf  model.xacro
src/multiagent_simulation/models/iris/: model.sdf
src/multiagent_simulation/models/iris_with_lidar_and_camera/: model.config  model.sdf
src/multiagent_simulation/models/lidar/: model.config  model.sdf  model.xacro
src/multiagent_simulation/models/rgbd_camera/: model.config  model.sdf  model.xacro
src/multiagent_simulation/multiagent_simulation/: move_drone.py
src/multiagent_simulation/rviz/: iris_with_lidar_and_camera.rviz
src/multiagent_simulation/worlds/: baylands.sdf  harmonic.sdf  harmonic_terrain.sdf  iris_maze.sdf  rubico.sdf  rubico_snowy.sdf  techhive.sdf
src/multiagent_simulation/worlds/modelflughafen/: model.sdf
