<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multiagent_simulation</name>
  <version>0.0.0</version>
  <description>Ardupilot multiagent simulation environment</description>
  <maintainer email="gilbert.tanner@aau.at">Gilbert Tanner</maintainer>
  <license>GPL-3.0</license>

  <depend>xacro</depend>
  <depend>ros_gz_image</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
